# trial_repo

./: .gitignore  .gitignore.  codecov.yml  pyproject.toml
.github/workflows/: github-actions-demo.yml  testing.yml
some_pkg/: __init__.py
some_pkg/some_pkg/: __init__.py  pkg.py
some_pkg/src/: pkg.py
some_pkg/test/: test_pkg.py
src/some_pkg/: __init__.py
test/: test_pkg.py
