[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "some_pkg"
version = "0.1.0"
description = "Minimal package"
authors = [{ name = "You", email = "you@example.com" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
source = ["some_pkg"]

[tool.coverage.report]
omit = ["*/test/*"]